<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:showAsAction="ifRoom"
        android:id="@+id/menu"
        android:orderInCategory="100"
        android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/profile"
                android:title="@string/information"/>
            <!-- <item
                android:id="@+id/menu_language"
                android:icon="@drawable/language_setting"
                android:title="@string/language"/>  -->
            <item
                android:id="@+id/menu_exit"
                android:icon="@drawable/exit"                
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>